<resources>
    <string name="app_name">IMA</string>
    <string name="send_alert_sms">Send alert sms</string>
    <string name="email">E-mail address</string>
    <string name="password">Password</string>
    <string name="signup">SIGN UP</string>
    <string name="login_link">Already a member? Log In here!</string>
    <string name="register_btn">Not a member? Register here!</string>
    <string name="phone">Phone number</string>
    <string name="login">Log In</string>
    <string name="otp">Get OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in_user">Signed in as :</string>
</resources>
